Fix nav alignment

--- a/_sass/fabric.scss
+++ b/_sass/fabric.scss
@@ -10,6 +10,11 @@
 	margin: 12px 6px;
 }
 
+.site-nav {
+	// Align with logo
+	margin-top: 12px;
+}
+
 .page-content {
 	padding: 0;
 }
